manifests/test/idp/gateway.networking.k8s.io_v1_httproute_keycloak-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-admin
  namespace: keycloak
spec:
  hostnames:
  - auth.10.5.0.54.nip.io
  parentRefs:
  - name: keycloak
  rules:
  - backendRefs:
    - name: keycloak
      port: 80
