manifests/test/idp/keycloak_gateway.networking.k8s.io_v1_gateway_keycloak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca
  name: keycloak
  namespace: keycloak
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 10.5.0.54
  listeners:
  - hostname: auth.10.5.0.54.nip.io
    name: keycloak
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - name: keycloak-gateway-tls
      mode: Terminate
