manifests/test/idp/v1_service_keycloak-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: keycloak
  name: keycloak-metrics
  namespace: keycloak
spec:
  ports:
  - name: http-metrics
    port: 9000
    protocol: TCP
    targetPort: http-metrics
  selector:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/part-of: keycloak
  type: ClusterIP
